# adblockplusandroid

./: .gitmodules  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JniFilterEngine.cpp  JniJsEngine.cpp
app/src/main/cpp/tmp/: Android.mk  Application.mk  JniFilter.cpp  JniJsEngine.cpp  JniSubscription.cpp  Utils.h
app/src/main/java/org/adblockplus/: ChunkedOutputStream.java
app/src/main/java/org/adblockplus/android/: ABPEngine.java  AboutDialog.java  AdblockPlus.java  AdvancedPreferences.java  AndroidFilterChangeCallback.java  AndroidLogSystem.java  AndroidShowNotificationCallback.java  AndroidUpdateAvailableCallback.java  AndroidUpdateCheckDoneCallback.java  AndroidWebRequest.java  AppCompatPreferenceActivity.java  ConfigurationActivity.java  CrashHandler.java  CrashReportDialog.java  HelpfulCheckBoxPreference.java  Preferences.java  ProxyConfigurationActivity.java  ProxyServerType.java  ProxyService.java  ReferrerMapping.java  RefreshableListPreference.java  ServiceBinder.java  Starter.java  Subscription.java  SubscriptionParser.java  SummarizedPreferences.java  Utils.java
app/src/main/java/org/adblockplus/android/activity/: AppCompatPreferenceActivity.java  ConfigurationActivity.java  ProxyConfigurationActivity.java  UpdaterActivity.java
app/src/main/java/org/adblockplus/android/compat/: CmGlobalProxyManager.java  CompatibilityException.java  LinkProperties.java  ProxyProperties.java
app/src/main/java/org/adblockplus/android/core/: ABPEngine.java  (+7 more)
app/src/main/java/org/adblockplus/brazil/: BaseRequestHandler.java  RequestHandler.java  SSLConnectionHandler.java  TransparentProxyHandler.java
app/src/main/java/org/adblockplus/libadblockplus/: AdblockPlusException.java  AppInfo.java  Disposable.java  Disposer.java  EventCallback.java  Filter.java  FilterChangeCallback.java  FilterEngine.java  HeaderEntry.java  IsAllowedConnectionCallback.java  JniExceptionHandler.java  JsEngine.java  JsValue.java  LogSystem.java  Notification.java  Platform.java  ServerResponse.java  ShowNotificationCallback.java  Subscription.java  UpdateAvailableCallback.java  UpdateCheckDoneCallback.java  WebRequest.java
app/src/main/java/org/literateprograms/: BoyerMoore.java
app/src/main/java/sunlabs/brazil/properties/: PropertiesList.java
app/src/main/java/sunlabs/brazil/server/: ChainHandler.java  Connection.java  Handler.java  Request.java  Server.java
app/src/main/java/sunlabs/brazil/util/: Base64.java  Format.java  Glob.java  MatchString.java  SocketFactory.java  StringMap.java
app/src/main/res/drawable/: toolbar_shadow.xml
app/src/main/res/layout/: toolbar.xml
app/src/main/res/menu/: menu_preferences.xml
app/src/main/res/raw-de/: proxysettings.html
app/src/main/res/raw-he/: proxysettings.html
app/src/main/res/raw-ja/: proxysettings.html
app/src/main/res/raw-ko/: proxysettings.html
app/src/main/res/raw-ro/: proxysettings.html
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml  sysarrays.xml  sysstrings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: preferences.xml  preferences_advanced.xml
(+46 files in other folders)
